--- a/js4devs/src/index.html
+++ b/js4devs/src/index.html
@@ -12,6 +12,7 @@
     </script>
   </head>
   <body>
+    <h1>Hallo Welt</h1>
     <button onclick="alert('foo')">click me</button>
   </body>
 </html>
