--- a/sheepNrun/index.html
+++ b/sheepNrun/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
     <script src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="index.css" />
+    <script type="text/javascript" src="js/background.js"></script>
   </head>
-  <body></body>
+  <body>
+    <canvas width="1024" height="512" id="sheep-and-run">
+      <div>Your browser does not support Canvas.</div>
+    </canvas>
+  </body>
 </html>
