--- a/sheepNrun/index.html
+++ b/sheepNrun/index.html
@@ -7,6 +7,8 @@
     <script src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="index.css" />
     <script type="text/javascript" src="js/background.js"></script>
+    <script type="text/javascript" src="js/platform.js"></script>
+    <script type="text/javascript" src="js/gap.js"></script>
   </head>
   <body>
     <canvas width="1024" height="512" id="sheep-and-run">
