--- a/sheepNrun/index.html
+++ b/sheepNrun/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="js/background.js"></script>
     <script type="text/javascript" src="js/platform.js"></script>
     <script type="text/javascript" src="js/gap.js"></script>
+    <script type="text/javascript" src="js/player.js"></script>
   </head>
   <body>
     <canvas width="1024" height="512" id="sheep-and-run">
