--- a/html5/example/history/index.html
+++ b/html5/example/history/index.html
@@ -8,6 +8,6 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <button>click me</button>
+    <button id="4">Edit</button>
   </body>
 </html>
