--- a/html5/index.html
+++ b/html5/index.html
@@ -52,7 +52,7 @@
         </fieldset>
         <fieldset>
           <button type="submit">save</button>
-          <button type="button" id="cancel">cancel</button>
+          <button type="reset" id="cancel">cancel</button>
         </fieldset>
       </form>
     </template>
